--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
-        <item name="materialButtonStyle">@style/GreenButtonStyle</item>
+        <item name="materialButtonStyle">@style/DefaultButtonStyle</item>
         <item name="bottomAppBarStyle">@style/BottomAppBarStyle</item>
         <item name="floatingActionButtonStyle">@style/FloatingActionButtonStyle</item>
-        <item name="android:windowBackground">@color/darkBackground</item>
+        <item name="android:windowBackground">@color/lightBackground</item>
         <item name="actionBarStyle">@style/ToolbarStyle</item>
         <item name="cardViewStyle">@style/CardViewStyle</item>
         <item name="textInputStyle">@style/TextInputLayoutStyle</item>
@@ -38,10 +38,11 @@
         <item name="backgroundTint">@color/mediumDarkBackground</item>
     </style>
 
-    <style name="GreenButtonStyle" parent="Widget.MaterialComponents.Button">
+    <style name="DefaultButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="fontFamily">@font/montserrat_semibold</item>
         <item name="cornerRadius">0dp</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="backgroundTint">@color/lightBackground</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
     <style name="RedButtonStyle" parent="Widget.MaterialComponents.Button">
@@ -69,7 +70,7 @@
 
     <style name="TextViewStyle" parent="android:Widget.TextView">
         <item name="fontFamily">@font/montserrat_regular</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
 </resources>
