--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -20,7 +19,7 @@
             android:layout_height="wrap_content"
             android:ems="15"
             android:hint="@string/email"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -39,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="15"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:hint="@string/username"
             android:inputType="text" />
 
@@ -58,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="15"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:hint="@string/password"
             android:inputType="textPassword" />
 
@@ -78,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:ems="15"
             android:hint="@string/repeat_password" />
 
