--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
     </style>
 
     <style name="FloatingActionButtonStyle" parent="Widget.MaterialComponents.FloatingActionButton">
-        <item name="backgroundTint">@color/colorPrimary</item>
+        <item name="backgroundTint">@color/lightBackground</item>
         <!--<item name="shapeAppearanceOverlay">@style/FabDiamondOverlay</item>-->
     </style>
 
