--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -24,8 +24,18 @@
         android:id="@+id/settingsFragment"
         android:name="com.example.reis.ui.main.fragments.SettingsFragment"
         android:label="SettingsFragment" />
-
+    <action
+        android:id="@+id/globalActionToOthersProfileFragment"
+        app:destination="@id/othersProfileFragment" />
     <action
         android:id="@+id/globalActionToCreatePostFragment"
         app:destination="@+id/createPostFragment" />
+    <fragment
+        android:id="@+id/othersProfileFragment"
+        android:name="com.example.reis.ui.main.fragments.OthersProfileFragment"
+        android:label="OthersProfileFragment">
+        <argument
+            android:name="uid"
+            app:argType="string" />
+    </fragment>
 </navigation>
