--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,76 +1,51 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textViewStyle">@style/TextViewStyle</item>
+
+    <style name="LightAppTheme" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">@color/colorOffWhite</item>
+        <item name="base_background_color">@color/colorWhite</item>
+        <item name="nav_color">@color/colorOffWhite</item>
+        <item name="icons_color">@color/colorLightGray</item>
+        <item name="text_color">@color/colorDarkGray</item>
+        <item name="hint_text_color">@color/colorLightGray</item>
+        <item name="clicked_icons_color">@color/colorBlack</item>
+        <item name="buttons_color">@color/colorBlack</item>
+
+        <item name="nav_margin">-8dp</item>
+
         <item name="materialButtonStyle">@style/DefaultButtonStyle</item>
-        <item name="bottomAppBarStyle">@style/BottomAppBarStyle</item>
-        <item name="floatingActionButtonStyle">@style/FloatingActionButtonStyle</item>
-        <item name="android:windowBackground">@color/lightBackground</item>
-        <item name="actionBarStyle">@style/ToolbarStyle</item>
-        <item name="cardViewStyle">@style/CardViewStyle</item>
         <item name="textInputStyle">@style/TextInputLayoutStyle</item>
+        <item name="android:textViewStyle">@style/DefaultTextViewStyle</item>
+    </style>
+
+    <style name="LightAppTheme.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorOffWhite</item>
+        <item name="base_background_color">@color/colorWhite</item>
+        <item name="nav_color">@color/colorOffWhite</item>
+        <item name="icons_color">@color/colorLightGray</item>
+        <item name="text_color">@color/colorDarkGray</item>
+        <item name="hint_text_color">@color/colorLightGray</item>
+        <item name="clicked_icons_color">@color/colorBlack</item>
+        <item name="buttons_color">@color/colorBlack</item>
+
+        <item name="materialButtonStyle">@style/DefaultButtonStyle</item>
+        <item name="textInputStyle">@style/TextInputLayoutStyle</item>
+        <item name="android:textViewStyle">@style/DefaultTextViewStyle</item>
     </style>
 
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="android:textColorHint">@color/colorPrimary</item>
-        <item name="startIconTint">@color/colorPrimary</item>
-        <item name="boxStrokeColor">@drawable/edit_text_box_border</item>
-        <item name="boxCornerRadiusTopEnd">0dp</item>
-        <item name="boxCornerRadiusBottomEnd">0dp</item>
-        <item name="boxCornerRadiusBottomStart">0dp</item>
-        <item name="boxCornerRadiusTopStart">0dp</item>
-    </style>
-
-    <style name="CardViewStyle" parent="Widget.MaterialComponents.CardView">
-        <item name="cardBackgroundColor">@color/mediumDarkBackground</item>
-    </style>
-
-    <style name="ToolbarStyle" parent="Widget.MaterialComponents.ActionBar.Primary">
-        <item name="background">@color/mediumDarkBackground</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
-
-    <style name="BottomAppBarStyle" parent="Widget.MaterialComponents.BottomAppBar">
-        <item name="backgroundTint">@color/mediumDarkBackground</item>
+        <item name="hintTextColor">?attr/hint_text_color</item>
+        <item name="startIconTint">?attr/buttons_color</item>
+        <item name="boxStrokeColor">?attr/buttons_color</item>
     </style>
 
     <style name="DefaultButtonStyle" parent="Widget.MaterialComponents.Button">
-        <item name="fontFamily">@font/montserrat_semibold</item>
-        <item name="cornerRadius">0dp</item>
-        <item name="backgroundTint">@color/lightBackground</item>
-        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="fontFamily">@font/futura_regular</item>
+        <item name="backgroundTint">?attr/buttons_color</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
-    <style name="RedButtonStyle" parent="Widget.MaterialComponents.Button">
-        <item name="fontFamily">@font/montserrat_semibold</item>
-        <item name="cornerRadius">0dp</item>
-        <item name="backgroundTint">#FF0000</item>
-        <item name="android:textColor">@android:color/white</item>
+    <style name="DefaultTextViewStyle" parent="Widget.MaterialComponents.TextView">
+        <item name="fontFamily">@font/futura_regular</item>
+        <item name="android:textColor">?attr/text_color</item>
     </style>
-
-    <style name="FloatingActionButtonStyle" parent="Widget.MaterialComponents.FloatingActionButton">
-        <item name="backgroundTint">@color/lightBackground</item>
-        <!--<item name="shapeAppearanceOverlay">@style/FabDiamondOverlay</item>-->
-    </style>
-
-    <style name="FabDiamondOverlay" parent="ShapeAppearance.MaterialComponents.SmallComponent">
-        <item name="cornerFamilyBottomRight">cut</item>
-        <item name="cornerFamilyBottomLeft">cut</item>
-        <item name="cornerFamilyTopRight">rounded</item>
-        <item name="cornerFamilyTopLeft">rounded</item>
-        <item name="cornerSizeBottomLeft">50%</item>
-        <item name="cornerSizeBottomRight">50%</item>
-        <item name="cornerSizeTopLeft">0%</item>
-        <item name="cornerSizeTopRight">0%</item>
-    </style>
-
-    <style name="TextViewStyle" parent="android:Widget.TextView">
-        <item name="fontFamily">@font/montserrat_regular</item>
-        <item name="android:textColor">@color/colorPrimary</item>
-    </style>
-
 </resources>
