--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -8,7 +8,7 @@
         android:id="@+id/ivPostImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/lightBackground"
+        android:background="@color/colorWhite"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -42,7 +42,7 @@
             android:inputType="textMultiLine"
             android:maxLength="200"
             android:maxLines="5"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/colorBlack" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
