--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,20 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorOffWhite">
+
+    <ImageView
+        android:id="@+id/top_bar"
+        android:layout_width="0dp"
+        android:layout_height="10dp"
+        android:background="@drawable/shape_title_bar"
+        app:layout_constraintBottom_toBottomOf="@+id/tvAppName"
+        app:layout_constraintEnd_toStartOf="@+id/tvAppName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvAppName" />
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    android:text="@string/app_name"
-        android:textSize="70sp"
-        app:fontFamily="@font/tahoma_bold"
-        android:textFontWeight="900"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/futura_bold"
+        android:text="@string/app_name"
+        android:textAllCaps="true"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/top_bar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -33,8 +46,10 @@
             android:layout_height="wrap_content"
             android:ems="15"
             android:hint="@string/email"
+            android:textColorHint="?attr/text_color"
             android:inputType="textEmailAddress"
-            android:textColor="@color/colorPrimary" />
+            android:fontFamily="@font/futura_regular"
+            android:textColor="?attr/text_color" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,15 +69,16 @@
             android:ems="15"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:textColor="@color/colorPrimary" />
+            android:fontFamily="@font/futura_regular"
+            android:textColor="?attr/text_color" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvRegisterNewAccount"
+        android:id="@+id/tvGoBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_account_register"
+        android:text="@string/go_back"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tilPassword"
