--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -2,22 +2,33 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/auth_nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/authFragment">
 
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.reis.ui.auth.fragments.LoginFragment"
         android:label="LoginFragment">
         <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
+            android:id="@+id/action_loginFragment_to_authFragment"
+            app:destination="@id/authFragment" />
     </fragment>
     <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.example.reis.ui.auth.fragments.RegisterFragment"
-        android:label="RegisterFragment">
+        android:id="@+id/authFragment"
+        android:name="com.example.reis.ui.auth.fragments.AuthFragment"
+        android:label="AuthFragment">
         <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
+            android:id="@+id/action_authFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_authFragment_to_signUpFrgament"
+            app:destination="@id/signUpFrgament" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFrgament"
+        android:name="com.example.reis.ui.auth.fragments.SignUpFragment"
+        android:label="SignUpFrgament">
+        <action
+            android:id="@+id/action_signUpFrgament_to_authFragment"
+            app:destination="@id/authFragment" />
     </fragment>
 </navigation>
