--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#08FF04</color>
-    <color name="mediumDarkBackground">#808080</color>
-    <color name="darkBackground">#202020</color>
-    <color name="lightBackground">#FFFFFF</color>
+    <color name="colorBlack">#272727</color>
+    <color name="colorDarkGray">#525252</color>
+    <color name="colorLightGray">#7C7C7C</color>
+    <color name="colorOffWhite">#E9E9E9</color>
+    <color name="colorWhite">#F3F3F3</color>
 </resources>
