--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="materialButtonStyle">@style/DefaultButtonStyle</item>
         <item name="textInputStyle">@style/TextInputLayoutStyle</item>
         <item name="android:textViewStyle">@style/DefaultTextViewStyle</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/DefaultDialogTextStyle</item>
     </style>
 
     <style name="LightAppTheme.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -45,6 +46,15 @@
     </style>
 
     <style name="DefaultTextViewStyle" parent="Widget.MaterialComponents.TextView">
+        <item name="fontFamily">@font/futura_regular</item>
+        <item name="android:textColor">?attr/text_color</item>
+    </style>
+
+    <style name="DefaultCardViewStyle" parent="Widget.MaterialComponents.CardView">
+        <item name="backgroundColor">?attr/base_background_color</item>
+    </style>
+
+    <style name="DefaultDialogTextStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
         <item name="fontFamily">@font/futura_regular</item>
         <item name="android:textColor">?attr/text_color</item>
     </style>
