Completed profile Searching

--- a/app/src/main/res/layout/item_simple_post.xml
+++ b/app/src/main/res/layout/item_simple_post.xml
@@ -17,7 +17,8 @@
             android:id="@+id/ivPostImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:scaleType="fitStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/img_avatar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivPostImage" />
