--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,15 +22,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ivProfileImage" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnToggleFollow"
+    <ImageButton
+        android:id="@+id/ibFollow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/follow"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_follow"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvProfileDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivProfileImage"
@@ -66,7 +66,7 @@
         android:maxLines="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/ibFollow" />
 
     <ProgressBar
         android:id="@+id/profilePostsProgressBar"
@@ -84,13 +84,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnToggleFollow"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileDescription"
         app:layout_constraintVertical_bias="1.0"
         tools:listitem="@layout/item_grid_post" />
 
