Set username edit to single line only

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -43,7 +43,8 @@
             android:id="@+id/etUsername"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:ems="15" />
+            android:ems="15"
+            android:singleLine="true"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
