--- a/app/src/main/res/layout/layout/fragment_register.xml
+++ b/app/src/main/res/layout/layout/fragment_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -12,14 +11,14 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/tilUsername"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="15"
-            android:hint="@string/email"
             android:textColor="@android:color/white"
             android:inputType="textEmailAddress" />
 
@@ -32,7 +31,8 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/username">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etUsername"
@@ -40,7 +40,6 @@
             android:layout_height="wrap_content"
             android:ems="15"
             android:textColor="@android:color/white"
-            android:hint="@string/username"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -51,7 +50,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2">
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        android:hint="@string/password">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
@@ -59,7 +59,6 @@
             android:layout_height="wrap_content"
             android:ems="15"
             android:textColor="@android:color/white"
-            android:hint="@string/password"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -71,7 +70,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilPassword">
+        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
+        android:hint="@string/repeat_password">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etRepeatPassword"
@@ -79,8 +79,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:textColor="@android:color/white"
-            android:ems="15"
-            android:hint="@string/repeat_password" />
+            android:ems="15" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
