Added app logo and fixed bug with no post helper

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group
+        android:scaleX="0.0648"
+        android:scaleY="0.0648"
+        android:translateX="21.6"
+        android:translateY="21.6">
+        <path
+            android:fillColor="@color/colorLightGray"
+            android:pathData="M476,128c-68.5,6.5 -130.7,35.7 -178.9,84 -47.6,47.6 -76.9,108.4 -84.6,175.5 -1.3,11.2 -1.5,44.8 -1.5,239.1l0,226.2 2.8,5.3c3.9,7.6 10.3,11.4 18.6,11.4 5.9,-0.1 7.7,-0.9 51.6,-22.4 25,-12.3 56.3,-27.6 69.5,-34.1 139.3,-67.9 170.8,-83.1 176,-84.6 9.5,-2.8 24,-2.4 34,1 8.7,3 19,9.4 24.6,15.3 2,2.1 22.4,29.7 45.4,61.3 22.9,31.6 42.9,58.8 44.3,60.4 1.5,1.6 4.5,3.7 6.7,4.7 16.1,7.5 34.3,-9.1 28.4,-25.9 -0.6,-1.7 -16.5,-24.4 -35.5,-50.4 -18.9,-26 -35.9,-50.3 -37.9,-53.9 -13.7,-26 -5.3,-59.3 19.2,-76.2 37.6,-25.8 62,-49.9 83.5,-82.2 8.9,-13.4 22.8,-40.9 28.3,-55.8 7.5,-20.4 13.4,-44.3 16.7,-67.7 2,-14.8 1.7,-64.2 -0.5,-79.5 -5.4,-36.1 -14.6,-65.6 -30.3,-96.5 -41.6,-82.4 -120.9,-139.4 -212.9,-153 -16.1,-2.4 -52.1,-3.4 -67.5,-2zM522.5,170c112.4,12.5 208.5,101.1 226,208.4 8.2,50.4 -0.7,102.5 -26.1,152.7 -12.6,24.9 -24.7,41.3 -46.3,63 -21.8,21.8 -42.6,36.8 -68.6,49.5 -67.4,32.8 -144.4,31 -215.5,-5.1 -64.2,-32.7 -113.6,-91.7 -131.5,-157.2 -6.5,-23.6 -7.9,-35 -7.9,-61.8 0.1,-21.3 0.4,-25.6 2.7,-38.5 4.7,-26.4 12.6,-49.8 25.1,-74.9 9.1,-18.1 16.1,-29.2 26.5,-41.9 31.4,-38.3 67.3,-65.1 108.1,-80.7 16.4,-6.3 41.8,-12.4 57.5,-13.8 9,-0.8 41.6,-0.6 50,0.3zM332.1,656.6c16.2,5.7 32.5,19 39.1,31.9 5.3,10.3 7.2,19.5 6.5,31.3 -1.3,23.6 -14.2,42 -36.7,52.4 -11.8,5.4 -15.8,6.3 -28,6.2 -13.8,-0.1 -21.9,-2.5 -32.9,-9.8 -16.2,-10.8 -25.3,-27.2 -26.7,-48 -0.8,-12.2 1.4,-23.7 6.2,-33.6 6.9,-14 22.1,-26.5 37.9,-31.2 8.2,-2.4 26.6,-2 34.6,0.8z"
+            android:strokeColor="#00000000" />
+    </group>
 </vector>
