--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,26 +10,21 @@
         android:layout_width="0dp"
         android:layout_height="10dp"
         android:background="@drawable/shape_title_bar"
-        app:layout_constraintBottom_toBottomOf="@+id/tvAppName"
-        app:layout_constraintEnd_toStartOf="@+id/tvAppName"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvAppName" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvAppName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="80dp"
+        android:layout_height="45dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/futura_bold"
-        android:text="@string/app_name"
-        android:textAllCaps="true"
-        android:textSize="30sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/top_bar"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_reis_text"
+        app:tint="?attr/icons_color" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmail"
