Some minor tweaks to the UI such as changing certain text to bold

--- a/app/src/main/res/layout/item_simple_post.xml
+++ b/app/src/main/res/layout/item_simple_post.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="@string/example_post_title"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/ivAuthorProfileImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ivAuthorProfileImage" />
