--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -31,10 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:fontFamily="@font/futura_bold"
+        android:fontFamily="@font/roboto_bold"
         android:text="@string/login"
         android:textColor="@color/colorDarkGray"
         android:textSize="50sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -48,6 +49,7 @@
         android:text="@string/sign_up"
         android:textColor="@color/colorLightGray"
         android:textSize="50sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
